--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Ingredients</title>
-    <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap-theme.min.css" />
+    <!-- <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap-theme.min.css" /> -->
+    <link rel="stylesheet" href="bower/foundation-sites/dist/foundation.css" />
     <link rel="stylesheet" href="css/bundle.css" />
 </head>
 <body>
@@ -13,6 +14,7 @@
 
     <script src="js/main.js"></script>
     <script src="bower/jquery/dist/jquery.min.js"></script>
-    <script src="bower/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower/foundation-sites/dist/foundation.min.js"></script>
+    <!-- <script src="bower/bootstrap/dist/js/bootstrap.min.js"></script> -->
 </body>
 </html>
